Bug 340310 - kdeinit5[363]: KXMessages used on non-X11 platform! This is an application bug.
Summary: kdeinit5[363]: KXMessages used on non-X11 platform! This is an application bug.
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwindowsystem
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-24 18:31 UTC by luigide
Modified: 2014-11-22 07:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description luigide 2014-10-24 18:31:27 UTC
Above line frequently appeared into my log file.
hw: ivybridge
soft: xorg-server-1.16.1,  xcb-1.11
i dont now what happened. i didnt see any noticeable problem.
i just post for keep informed.

Reproducible: Always
Comment 1 Martin Flöser 2014-10-24 18:43:47 UTC
do you know which application was causing the log message? As it says: it's an application bug which the library reports.
Comment 2 luigide 2014-10-25 21:06:35 UTC
hi. i just test plasma-5.1.0.1   i boot with plasma. as soon as plasma desktop come then i switch 

another tty.  in there a get a copy of log.  As you see i didnt run an application or open any window.

i get a copy of log immediately, after booted. So app/lib should be part of plasma which is report it.

but i dont know how i detect it.
Comment 3 Martin Flöser 2014-11-20 18:30:23 UTC
The messages might be created by kdeinit whenever an application is started.
Comment 4 Martin Flöser 2014-11-22 07:18:10 UTC
Git commit 837f1ccc0af5b53dcd394d5cce535ee54a857933 by Martin Gräßlin.
Committed on 21/11/2014 at 10:58.
Pushed by graesslin into branch 'master'.

Drop incorrect warnings when using KXMessages without QX11Info

The idea was to not perform the action if QX11Info reports that its
not the xcb plugin. But this check is not correct as those methods
are not going through QX11Info at all. In addition they pass in either
an xcb connection or XLib display which is totally fine and needed
for example if we want Wayland applications interact with the X11
world. Also it causes problems for e.g. kdeinit which is not a
Q*Application and thus does not have a QX11Info.

At the same time fix an incorrect usage of QX11Info::connection
where an xcb_connection_t* is already passed in to the method.
REVIEW: 121198

M  +2    -10   src/kxmessages.cpp

http://commits.kde.org/kwindowsystem/837f1ccc0af5b53dcd394d5cce535ee54a857933